--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.+'
     compile 'com.android.support:recyclerview-v7:26.0.+'
 
+
+//    маленькая библиотечка)
+    compile 'com.jaredrummler:android-processes:1.1.1'
+
     testCompile 'junit:junit:4.12'
 }
